--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,3 @@
-REACT_APP_API_URL=
-REACT_APP_AWS_ACCESS_KEY_ID=
-REACT_APP_AWS_SECRET_ACCESS_KEY=
-REACT_APP_AWS_REGION=
-REACT_APP_IS_API_INTEGRATED=0
+REACT_APP_BASE_URL=
+REACT_APP_AWS_CLIENT_ID=
+REACT_APP_AWS_CLIENT_SECRET=
