--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-crypto/sha256-js": "^2.0.2",
-    "@aws-sdk/signature-v4": "^3.226.0",
+    "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,15 +13,14 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "aws-sdk": "^2.1287.0",
-    "axios": "^0.27.2",
+    "graphql": "^16.6.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-click-away-listener": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-timeago": "^7.1.0",
     "scss": "^0.2.4",
