added logout and some changes

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,4 @@
-REACT_APP_BASE_URL=http://localhost:3000
-REACT_APP_AWS_CLIENT_ID=4ap2b4i1m5mm8rngd9fu3875o
-REACT_APP_AWS_CLIENT_SECRET=1pb510h6oh72pb5gd1ll33jpvm818g0p36vgbc9otif7ra8urfnc
-REACT_APP_AUTH_URL=https://gravity-dev.auth.us-east-1.amazoncognito.com/oauth2/authorize
-REACT_APP_APOLLO_CLIENT_LINK=https://graph.dev.jit.care/graphql
-REACT_APP_AWS_REDIRECT_URL=http://localhost:3000/oAuth/oauthcallback
+REACT_APP_AWS_CLIENT_ID=1p3h4mksfaue4q8jn47ufebor
+REACT_APP_AUTH_URL=https://gravity-dev.auth.us-east-1.amazoncognito.com/
+REACT_APP_APOLLO_CLIENT_LINK=https://graph.dev.jit.care/
+REACT_APP_AWS_REDIRECT_URL=http://localhost:3000/
