--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^5.1.4",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
